fix(avo-2094): adjust spacing of tabs on assignment pages

--- a/src/assignment/components/AssignmentHeading.scss
+++ b/src/assignment/components/AssignmentHeading.scss
@@ -86,6 +86,18 @@
 		}
 	}
 
+	&__bottom {
+		.c-tabs {
+			> .c-tab-item {
+				padding: 0.8rem;
+
+				@media screen and (min-width: $g-bp1) {
+					padding: 1.2rem;
+				}
+			}
+		}
+	}
+
 	&__title {
 		max-width: 100%;
 
